--- a/packages/com.ovaremake.core/meta/targetwidget.ui
+++ b/packages/com.ovaremake.core/meta/targetwidget.ui
@@ -14,20 +14,34 @@
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Please sellect the FF7 installation disk</string>
+      <string>FF7 installation disk</string>
      </property>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QLineEdit" name="installDirectory"/>
-     </item>
-     <item>
-      <widget class="QToolButton" name="installChooser">
-       <property name="text">
-        <string>...</string>
-       </property>
+      <widget class="QComboBox" name="installComboBox">
+       <item>
+        <property name="text">
+         <string>New Item</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>New Item</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>New Item</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>New Item</string>
+        </property>
+       </item>
       </widget>
      </item>
     </layout>
