--- a/packages/com.ovaremake.core/meta/targetwidget.ui
+++ b/packages/com.ovaremake.core/meta/targetwidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>333</width>
-    <height>151</height>
+    <width>429</width>
+    <height>129</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -21,27 +21,13 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QComboBox" name="installComboBox">
-       <item>
-        <property name="text">
-         <string>New Item</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>New Item</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>New Item</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>New Item</string>
-        </property>
-       </item>
+      <widget class="QLineEdit" name="installDirectory"/>
+     </item>
+     <item>
+      <widget class="QToolButton" name="installChooser">
+       <property name="text">
+        <string>...</string>
+       </property>
       </widget>
      </item>
     </layout>
